compiler/tests/should-fail/NoSelectionSolution.via
/* NoSelectionSolutionError */

host alice : {A & B<-}
host bob   : {B & A<-}
host chuck : {A & B}

fun main() {
    val x: int@YaoABY(server = alice, client = bob) = 1;
    /* MPC(alice, bob) cannot send to chuck. */
    output x to chuck;
}
